@@ -6,6 +6,8 @@
 * Changes in 1.15.0
 ** New functionality
    - StandardPolicy::accept_hash_property
+ * Notable changes
+   - Updated the crypto-cng backend.
 * Changes in 1.14.0
 ** New cryptographic backends
    - We added a backend that uses Botan.
